--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,10 @@
 {
   "version": 2,
   "builds": [
-    { "src": "client/", "use": "@vercel/static" },
-    { "src": "server/index.ts", "use": "@vercel/node" }
+    { "src": "package.json", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "server/index.ts" },
-    { "src": "/(.*)", "dest": "client/$1" }
+    { "src": "/api/(.*)", "dest": "/dist/index.js" },
+    { "src": "/(.*)", "dest": "/dist/$1" }
   ]
 }
